Update: get ready to do Unit Test

--- a/ADSB/Info.plist
+++ b/ADSB/Info.plist
@@ -55,5 +55,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Enable this can send aircraft alert to you from background.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Enable this can send aircraft alert to you from background.</string>
 </dict>
 </plist>
